src/output.out
./graph/LocalFlags.java:20: error: variable value is already defined in method add(String,Object)
		flags.forEach((key, value) -> {
		                    ^
./graph/LocalFlags.java:60: error: no suitable constructor found for HashMap(HashMap<String,Object>)
		flags.putIfAbsent(key, new HashMap<K, Object>(defaultFlags));
		                       ^
    constructor HashMap.HashMap(int) is not applicable
      (argument mismatch; HashMap<String,Object> cannot be converted to int)
    constructor HashMap.HashMap(Map<? extends K,? extends Object>) is not applicable
      (argument mismatch; HashMap<String,Object> cannot be converted to Map<? extends K,? extends Object>)
  where K is a type-variable:
    K extends Object declared in class LocalFlags
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
2 errors
Main.java:2: error: cannot find symbol
import graph.NoSuchLabelException;
            ^
  symbol:   class NoSuchLabelException
  location: package graph
Main.java:103: error: cannot find symbol
		catch(NoSuchLabelException e){
		      ^
  symbol:   class NoSuchLabelException
  location: class Main
2 errors
Error: Unable to initialize main class Main
Caused by: java.lang.NoClassDefFoundError: graph/NoSuchLabelException
